--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -136,17 +136,25 @@
                         </a>
                     </div>
                     <div>
+                        <a href="https://github.com/reactive-graph/reactive-graph" title="Git repository" aria-label="Git repository">
+                            <img src="images/brand-github.svg" alt="Git repository">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/@reactive-graph" title="YouTube" aria-label="YouTube">
+                            <img src="images/brand-youtube.svg" alt="YouTube">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.facebook.com/reactive.graph" title="Facebook" aria-label="Facebook">
+                            <img src="images/brand-facebook.svg" alt="Facebook">
+                        </a>
+                    </div>
+                    <div>
                         <a href="/rss.xml" title="RSS Feed">
                             <img src="images/rss.svg" alt="RSS Feed">
                         </a>
                     </div>
-                    {{#if git_repository_url}}
-                    <div>
-                        <a href="{{git_repository_url}}" title="Git repository" aria-label="Git repository">
-                            <img src="images/brand-github.svg" alt="Git repository">
-                        </a>
-                    </div>
-                    {{/if}}
                     {{#if git_repository_edit_url}}
                     <div>
                         <a href="{{git_repository_edit_url}}" title="Suggest an edit" aria-label="Suggest an edit">
@@ -211,11 +219,15 @@
                         <a href="https://www.reactive-graph.io/" title="www.reactive-graph.io" aria-label="www.reactive-graph.io">
                             <img src="design/public/logo/circle/reactive-graph-circle-white.svg" alt="www.reactive-graph.io" class="right-buttons-logo">
                         </a>
-                        {{#if git_repository_url}}
-                        <a href="{{git_repository_url}}" title="Git repository" aria-label="Git repository">
-                            <img src="images/brand-github.svg" alt="Search" style="filter: invert(1);">
+                        <a href="https://github.com/reactive-graph/reactive-graph" title="Git repository" aria-label="Git repository">
+                            <img src="images/brand-github.svg" alt="Git repository" style="filter: invert(1);">
                         </a>
-                        {{/if}}
+                        <a href="https://www.youtube.com/@reactive-graph" title="YouTube" aria-label="YouTube">
+                            <img src="images/brand-youtube.svg" alt="YouTube" style="filter: invert(1);">
+                        </a>
+                        <a href="https://www.facebook.com/reactive.graph" title="Facebook" aria-label="Facebook">
+                            <img src="images/brand-facebook.svg" alt="Facebook" style="filter: invert(1);">
+                        </a>
                         {{#if git_repository_edit_url}}
                         <a href="{{git_repository_edit_url}}" title="Suggest an edit" aria-label="Suggest an edit">
                             <img src="images/pencil.svg" alt="Search" style="filter: invert(1);">
