Use rendered logo in sidebar

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -115,7 +115,7 @@
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-header">
                 <h3>
-                    <img src="design/public/logo/full/reactive-graph-full-black.svg" alt="This Month in Reactive Graph!" class="sidebar-logo">
+                    <img src="design/public/logo/rendered/mexican-pink/reactive-graph-200x200.png" alt="This Month in Reactive Graph!" class="sidebar-logo">
                 </h3>
             </div>
             <div class="sidebar-footer">
