--- a/theme/css/chrome.css
+++ b/theme/css/chrome.css
@@ -553,13 +553,13 @@ ul#searchresults span.teaser em {
 
 .chapter li a:hover {
     color: var(--text-1--dark);
-    text-shadow: 0 0 10px var(--text-1), 0 0 25px var(--malachite-1--adaptive);
+    text-shadow: 0 0 10px var(--text-1), 0 0 25px var(--mexican-pink-1--adaptive);
 }
 
 .chapter li a.active {
     color: black;
     font-family: var(--font-sans);
-    text-shadow: 0 0 5px var(--text-1), 0 0 10px var(--malachite-1--adaptive);
+    text-shadow: 0 0 5px var(--text-1), 0 0 10px var(--mexican-pink-1--adaptive);
 }
 
 .chapter li > a.toggle {
