--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -202,11 +202,11 @@
                 <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
                         <label id="sidebar-toggle" class="icon-button" for="sidebar-toggle-anchor" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
-                            <img src="images/menu-2.svg" alt="Search" style="filter: invert(1);">
+                            <img src="images/menu-2.svg" alt="Search" class="rg-header-icons">
                         </label>
                         {{#if search_enabled}}
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
-                            <img src="images/search.svg" alt="Search" style="filter: invert(1);">
+                            <img src="images/search.svg" alt="Search" class="rg-header-icons">
                         </button>
                         {{/if}}
                     </div>
@@ -217,20 +217,20 @@
 
                     <div class="right-buttons">
                         <a href="https://www.reactive-graph.io/" title="www.reactive-graph.io" aria-label="www.reactive-graph.io">
-                            <img src="design/public/logo/circle/reactive-graph-circle-white.svg" alt="www.reactive-graph.io" class="right-buttons-logo">
+                            <img src="design/public/logo/mono/reactive-graph-black.svg" alt="www.reactive-graph.io" class="rg-header-icons right-buttons-logo">
                         </a>
                         <a href="https://github.com/reactive-graph/reactive-graph" title="Git repository" aria-label="Git repository">
-                            <img src="images/brand-github.svg" alt="Git repository" style="filter: invert(1);">
+                            <img src="images/brand-github.svg" alt="Git repository" class="rg-header-icons">
                         </a>
                         <a href="https://www.youtube.com/@reactive-graph" title="YouTube" aria-label="YouTube">
-                            <img src="images/brand-youtube.svg" alt="YouTube" style="filter: invert(1);">
+                            <img src="images/brand-youtube.svg" alt="YouTube" class="rg-header-icons">
                         </a>
                         <a href="https://www.facebook.com/reactive.graph" title="Facebook" aria-label="Facebook">
-                            <img src="images/brand-facebook.svg" alt="Facebook" style="filter: invert(1);">
+                            <img src="images/brand-facebook.svg" alt="Facebook" class="rg-header-icons">
                         </a>
                         {{#if git_repository_edit_url}}
                         <a href="{{git_repository_edit_url}}" title="Suggest an edit" aria-label="Suggest an edit">
-                            <img src="images/pencil.svg" alt="Search" style="filter: invert(1);">
+                            <img src="images/pencil.svg" alt="Search" class="rg-header-icons">
                         </a>
                         {{/if}}
 
