--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -151,6 +151,11 @@
                         </a>
                     </div>
                     <div>
+                        <a href="https://floss.social/@reactive_graph" title="Mastodon" aria-label="Mastodon">
+                            <img src="images/brand-mastodon.svg" alt="Mastodon">
+                        </a>
+                    </div>
+                    <div>
                         <a href="/rss.xml" title="RSS Feed">
                             <img src="images/rss.svg" alt="RSS Feed">
                         </a>
@@ -227,6 +232,9 @@
                         </a>
                         <a href="https://www.facebook.com/reactive.graph" title="Facebook" aria-label="Facebook">
                             <img src="images/brand-facebook.svg" alt="Facebook" class="rg-header-icons">
+                        </a>
+                        <a href="https://floss.social/@reactive_graph" title="Mastodon" aria-label="Mastodon">
+                            <img src="images/brand-mastodon.svg" alt="Mastodon" class="rg-header-icons">
                         </a>
                         {{#if git_repository_edit_url}}
                         <a href="{{git_repository_edit_url}}" title="Suggest an edit" aria-label="Suggest an edit">
